# truss

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.txt  appveyor.yml  bgfx_upgrade.md  build.md  build.txt  genie.lua  osx_env_setup.sh  premake5.lua  snapcraft.yaml
.github/workflows/: pullrequest.yml  release.yml
_build/: build.lua  cibuild.lua  linuxbuild.sh
cmake/: PrintTargetProperties.cmake  bgfx.cmake  c_flag_overrides.cmake  cxx_flag_overrides.cmake  openvr.cmake  physfs.cmake  sdl.cmake  sfml.cmake  stb.cmake  terra.cmake  utils.cmake
datasets/: testo.json
docs/: Dockerfile  Makefile  README.md  _config.yml  conf.py  hall_of_arch_crop.mtl  index.html  index.html.md  index.rst  make.bat  search.html  tbcformat.txt  testo.css  trussdoc.css  trusslit.css
docs/_documentation/: 00_introduction.md  01_getting_started.md  02_gfx.md
docs/_includes/: sidebar.html
docs/_layouts/: default.html
docs/_posts/: 2017-11-27-welcome-to-jekyll.markdown
docs/_sass/: _borland.scss  _monaki.scss
docs/css/: style.scss
docs/gfx/: geometry.rst
docs/js/: search.js  sidebar.js
examples/vs_helloworld/: fake.t  main.cpp
extras/bgfx_nanovg/: nanovg.cpp  nanovg_addon.cpp  nanovg_addon.h  nanovg_bgfx_c99.cpp
extras/websocket_client/: wsclient_addon.cpp  wsclient_addon.h
include/: bgfx_truss.c99.h  nanovg_terra.h
include/bgfx/: bgfx_imageutil.h  bgfx_truss.c99.h  cimgui.h  cimgui_terra.h  imgui.h  nanovg.h  nanovg_terra.h
include/compat/: stdbool.h  stdlib.h
include/fakestd/: math.h  stdbool.h  stdint.h  stdio.h
include/sdl/: sdl_minimal.h
scripts/: bgfx_constants.t  bootstrap.t
scripts/addons/: sdl.t
scripts/core/: bootstrap.t
scripts/dart/: meshmanager.t
scripts/devtools/: genconstants.t  webconsole.t
scripts/examples/: 00_buffercube.t  01_raw_scenegraph.t  02_geometry.t  03_passes.t  05_line.t  06_futureplot.t  08_perftest.t  09_fullscreen_quad.t  10_transient_quads.t  11_pointcloud.t  cam_calib_synth.t  cube.t  dart_gui.t  dart_gui_test.t  dart_simple_renderer.t  guidev.t  hydra.t  linemod_synth.t  loadmesh.t  loadstl.t  nanovg.t  pbr_simple_renderer.t  prpy_loader.t  stl_simple_renderer.t
scripts/geometry/: cylinder.t  debugcube.t  geoutils.t  grid.t  icosphere.t  line.t  plane.t  pointcloud.t
scripts/gfx/: buffers.t  bufferutils.t  camera.t  geometry.t  mesh.t  multipass.t  object3d.t  pbrforwardpass.t  renderpass.t  rendertarget.t  scenegraph.t  texture.t  uniforms.t  vertexdefs.t
scripts/gui/: console.t  futureplot.t  grid.t  labels.t  orbitcam.t  plotting.t  textdrawing.t  widgetdrawing.t
scripts/input/: sixense.t
scripts/io/: ddp.t  ros.t  websocket.t
scripts/loaders/: objloader.t  stlloader.t
scripts/math/: matrix.t  quat.t  vec.t
scripts/mesh/: buffers.t  line.t  mesh.t  vertexdefs.t
scripts/misc/: haserrors.t
scripts/renderers/: pbr_renderer.t  pipeline.t  renderpass.t  simple_renderer.t
scripts/shaders/: pbr.t
scripts/sound/: soloud.t  soloud_test.t
scripts/utils/: appscaffold.t  colorcoder.t  fileutils.t  shaderutils.t  stringutils.t  textureutils.t  tileshot.t
src/: bx_utils.h  main.cpp  main.t  minimain.cpp  truss.cpp  truss.h  truss_sdl.cpp  truss_sdl.h  trussapi.h
src/async/: _test_async.t  promise.t
src/core/: VERSION.lua  _entry.t  _setup_api.t  _setup_base_package.t  _setup_fs.t  _setup_log.t  _setup_packages.t  _setup_path.t  _setup_require.t  _setup_user_config.t  _setup_utils.t  core.t  memory.t  module.t  package_thoughts.md
src/dev/: _test_ci_failure.t  bgfxgen.t  buildshaders.moon  buildshaders.t  consoletools.t  docgen.t  docs.t  downloadlibs.t  eval.t  genconstants.t  jape.t  miniconsole.t  pkginfo.t  printinfo.t  repl.t  term2.t  termcolortest.t  test.t  test_docgen.t  testutils.t
src/ecs/: _test_ecs.t  component.t  ecs.t  script.t  system.t
src/examples/: _test_nvgcolor.t  bindiv.t  canvas.t  cube.t  gamepad.t  headless.t  minimal.moon  minimal.t  multithread.t  multiview.t  nanovg.t  new_canvas.t  new_cuberender.t  new_dynamic.t  new_keyboard.t  new_line.t  perf.t  repl.t  terra_disas.t  wasm_helloworld.t
src/format/: obj.t  stl.t
src/geometry/: _doc_geometry.t  geoutils.t  off_center_cube.t  polygon.t  ribbon.t
src/gfx/: _gfx.t  _test_gfx.t  bgfx.t  bgfx_constants.t  bufferutils.t  common.t  compute.t  geometry.t  imageload.t  imrender.t  init.t  nanovg.t  rendertarget.t  shaders.t  texture.t  view.t
src/graphics/: _doc_graphics.lua  canvas.t  framestats.t  grid.t  immediate.t  line.t  pipeline.t  renderer.t  renderop.t  stage.t
src/imgui/: databar.t  imgui.t  init.t  styling.t
src/input/: sdl.t  sdl_input.t  windowing.t
src/io/: imagewrite.t  zmq.t
src/lib/: StackTracePlus.lua  deferred.lua
src/lua/: lua.t  luabinpack.t  node_compat.t
src/luapackage/: luabinpack.t
src/math/: cmath.t  colorspaces.t  matrix.t  projections.t  quat.t  random.t  tmath.t  types.t  vec.t
src/moonscript/: _test_moonscript.t  test.moon
src/native/: _test_utf8.t  _test_vector.t  base64.t  box.t  buffer.t  clib.t  headerparser.t  nvgwrap.t  tga.t  timing.t  typeutils.t  utf8.t  vector.t
src/osnative/: timing.t
src/pkg_util/: lua_package.t
src/procgen/: _test_murmur.t  _test_strongrand.t  _tests.t  chacha.t  marchingcubes.t  murmur.t  simplex.t  strongrand.t
src/protobuf/: _test_protobuf.t  _tests.t  decodergen.t  encodergen.t  gen.t  init.t  schemaparser.t  wireformat.t
src/sound/: soloud.t  soloud_test.t
src/substrate/: _test_array.t  _test_assert.t  _test_derives.t  _test_file.t  _test_intrinsics.t  _test_utf8.t  _tests.t  alloc.t  array.t  box.t  buffer.t  cenum.t  cfg.t  cfile.t  clib.t  commontypes.t  derive.t  file.t  init.t  intrinsics.t  lazyload.t  libc.t  log.t  string.t  typeutils.t  util.t  vector.t
src/util/: file.t  (+5 more)
test/: break_terra.t  gentest.t  perf_test_math.t  test_math.t  test_objloader.t  trussemulator.t
utils/: bgfx_define_list.lua  bgfx_define_names.txt  bgfx_truss.c99.h  bgfxdefineslist.txt  defines_to_list.py  emit_openvr_c_api.py  openvr_wrapper.c  openvr_wrapper.h  stitch_bigshot.py  translate_bgfx_defines.py
(+121 files in other folders)
